fix: print on mobile (#1361)
* fix: issue with print in safari

* fix: hide bookmark on print on topic pages

* fix: add font-family to print

* bump patch versions

* fix: adjust search page print

--- a/h5p-bildetema/src/components/SearchPage/SearchResultCard/SearchResultCard.module.scss
+++ b/h5p-bildetema/src/components/SearchPage/SearchResultCard/SearchResultCard.module.scss
@@ -15,6 +15,10 @@
   z-index: $fav-language-selector-z-index;
   right: 0.5rem;
   top: 0.5rem;
+
+  @media print {
+    display: none;
+  }
 }
 
 .image_container {
